[package]
name = "naive-sql"
version = "0.1.0"
authors = ["Little-Wallace <bupt2013211450@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sqlparser = "0.9"
msql-srv = { git = "https://github.com/Little-Wallace/msql-srv.git", branch = "async", default-features = false }
mysql_common = "0.22"
byteorder = "1"
mysql = "*"
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
tikv-client = { git = "https://github.com/tikv/client-rust.git", branch = "master"}

[workspace]
# See https://github.com/rust-lang/rfcs/blob/master/text/2957-cargo-features2.md
# Without resolver = 2, using `cargo build --features x` to build `cmd`
# will _not_ propagate the feature `x` into `cmd`'s direct dependencies.
resolver = "2"
members = [
"cmd"
]
default-members = ["cmd"]
